# stock-_analysis

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: daily_run.yml
config/: rules.yaml  scoring_weights.yaml  settings.yaml  universe.yaml
scripts/: backfill_history.py  run_daily.py  setup_scheduler.ps1
src/stock_analysis/: main.py
src/stock_analysis/ai/: gemini_client.py  news_fetcher.py  qualitative_analyzer.py
src/stock_analysis/config/: loader.py
src/stock_analysis/data/: cache.py  fundamentals.py  index_members.py  market_overview.py  ohlcv.py  technicals.py
src/stock_analysis/output/: csv_export.py  email_digest.py  html_report.py
src/stock_analysis/scoring/: composite.py  growth_score.py  momentum_score.py  quality_score.py  risk_score.py  valuation_score.py
src/stock_analysis/screening/: engine.py  rule_parser.py  sections.py
src/stock_analysis/universe/: fetcher.py  filter.py
src/stock_analysis/utils/: logging_config.py  retry.py
templates/: report.html.j2
tests/: conftest.py
tests/unit/: test_rule_parser.py  test_scoring.py  test_technicals.py
