[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-analysis"
version = "1.0.0"
description = "Daily NSE stock analysis agent with AI-powered insights"
requires-python = ">=3.11"
dependencies = [
    # Data fetching
    "yfinance>=0.2.40",
    "httpx[http2]>=0.27.0",
    "beautifulsoup4>=4.12.3",
    "lxml>=5.2.0",
    "jugaad-data>=0.25",
    "feedparser>=6.0.11",
    # Data processing
    "pandas>=2.2.2",
    "pandas-ta>=0.3.14b0",
    "numpy>=1.26.4",
    "pyarrow>=16.0.0",
    "pdfplumber>=0.11.1",
    # AI
    "anthropic>=0.30.0",
    "google-genai>=1.0.0",
    # Config & validation
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.1",
    # Output
    "jinja2>=3.1.4",
    # Utilities
    "tenacity>=8.3.0",
    "loguru>=0.7.2",
    "schedule>=1.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-mock>=3.14.0",
    "respx>=0.21.1",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
